# SmaRTC

./: .gitattributes  .gitignore  ENTERPRISE_FEATURES_IMPLEMENTATION.md  LICENSE  NOTICE  PROJECT_STATUS.md  README.md  ZERO_COST_README.md
C#/Exemple_csharp/: ChatClient.cs  Exemple_csharp.csproj  Program.cs
C#/Luncher_csharp/: App.xaml  App.xaml.cs  Converters.cs  Luncher_csharp.csproj  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs
Flutter/: README.md
Flutter/Exemple_flutter/: README.md  pubspec.yaml
Flutter/Luncher_flutter/: App.xaml  App.xaml.cs  Converters.cs  Luncher_flutter.csproj  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs
Go/Exemple_Go/: go.mod  go.sum  main.go
Python/: README.md
Rust/Exemple_Rust/: Cargo.toml
Rust/Exemple_Rust/src/: main.rs
Rust/Exemple_Rust/src/sdk/: mod.rs
SmaRTC-core/: .gitignore  QUICK_START.md  README.md  SDK_FINAL_REPORT.md  SDK_IMPROVEMENTS.md  SmaRTC.sln  TunRTC.sln  deploy-zero-cost.ps1  test-api.ps1
SmaRTC-core/sdk/rust/: Cargo.toml
SmaRTC-core/sdk/rust/src/: lib.rs
SmaRTC.Service_Launcher/: App.xaml  App.xaml.cs  Launch.bat  MainWindow.xaml  MainWindow.xaml.cs  README.md  SmaRTC.Service_Launcher.csproj  Start-Launcher.ps1
TypeScript/: README.md
api/: Dockerfile  Program.cs  RATE_LIMITING_HEALTH_CHECKS.md  api.csproj  appsettings.json
api.tests/: api.tests.csproj
database/: schema.sql
deploy/: create-tunrtc.ps1  docker-compose.yml  docker-compose.zero-cost.yml  haproxy.cfg  prometheus.yml  setup-tunrtc.ps1
docs/: README.md  auth-claims.md
load-tests/: connection-capacity.yml  session-scaling.yml  stress-test.yml
sdk/: README.md
signal-server/: Dockerfile.optimized  Program.Optimized.cs  Program.Simple.cs  Program.cs  signal-server.csproj  signal-server.optimized.csproj  signal-server.simple.csproj
stun-turn/: turnserver.conf
(+241 files in other folders)
