[package]
name = "smartc-rust-example"
version = "1.0.0"
edition = "2021"
authors = ["Mounir Azizi <DeLTa-X Tunisia>"]
description = "SmaRTC Rust Chat Example - Demonstration Only"
license = "Proprietary"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
signalrs = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
ctrlc = "3.4"
uuid = { version = "1.6", features = ["v4"] }
futures = "0.3"
