[package]
name = "smartc-rust-example"
version = "1.0.0"
edition = "2021"
authors = ["Mounir Azizi <DeLTa-X Tunisia>"]
description = "SmaRTC Rust Chat Example - Demonstration Only"
license = "Proprietary"

[dependencies]
tokio = { version = "1", features = ["full", "sync"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2"
ctrlc = "3"
futures-util = "0.3"
url = "2"
